Comments
Removed method countAllTasks from code and from swagger. Included Comments.
